# tooling

commom/: .symbols_ascii.md  croper.sh  jfoto.sh  jopener.sh  jvideo.sh  masstag.sh  mpvlst.sh  transparency.sh  vidjo.sh  wellcomeascii.sh
commom/extracao-pdf/: extrator-img.py  extrator-texto.py
commom/fraseador/: .frases  Cargo.toml
commom/fraseador/src/: main.rs
commom/jlixxo/: Cargo.toml  rustfmt.toml
commom/jlixxo/src/: main.rs
commom/jname/: todo.txt
commom/jpdf/: Cargo.toml  README.md
commom/jpdf/src/: main.rs
commom/jreferences/: Cargo.toml  README.md  jRef.sh  teste.medb
commom/jreferences/src/: entrada.rs  main.rs  normalize.rs  trims.rs
commom/jwraper/: Cargo.toml  README.md
commom/jwraper/src/: args.rs  main-backup.rs  main.rs
commom/my_dwm/: config.def.h  config.def.h.backup  config.h  dwm  dwm.c  dwm.c.backup  dwm.c.orig  dwm.c.rej
commom/my_dwm/backups/: config.h
commom/terminal-separator/: Cargo.toml  inspired.sh
commom/terminal-separator/src/: args.rs  main.rs
deprecated/: escanear.sh  executador  jvideo.sh  limpanome.sh  mutatio.sh  oo.sh  questionario.sh  svd.sh  terminal_separator.sh  vr.sh
deprecated/roff/: cabecalho.ms  converte-img-to-ps.sh  groffcomp.sh  latinchar.sh  latinchar_lista.sh
macbook-pro/setups/: 70-synaptics.conf  bcwc-pcie-git-0.5.7.r2.g8431504-1-x86_64.pkg.tar.xz  broadcom-wl-dkms-6.30.223.271-26-x86_64.pkg.tar.zst  manual-instalacao.md  xmodmap_fev2021
thinkpad/: ajeita_suspend.sh  apagatela.sh  cpuusage.sh  gravador.sh  jfoto.sh  macdrive.sh  teclado-thinkpad.sh  volume.sh
(+7 files in other folders)
