[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
textwrap = "0.16.0"
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size.a
strip = true  # Automatically strip symbols from the binary.
